Update Animation help

--- a/app/editor-components/animation-help/animation-help.css
+++ b/app/editor-components/animation-help/animation-help.css
@@ -1,10 +1,16 @@
 .animation-helper {
-    background: white;
+    background: #ffffff;
     z-index: 100;
+    
+}
+
+.animation-helper h1  {
+    font-family: Open Sans Condensed;
+    font-weight: 800;
 }
 
 .animation-helper .menu-item {
-    font-family: "Open Sans Condensed";
+    font-family: Open Sans Condensed;
     float: left;
     margin-right: 8px;
     font-size: 20px;
@@ -17,6 +23,16 @@
     text-decoration: underline;
     color: orange;
     cursor: pointer;
+}
+
+.animation-helper .menu-item::before {
+    content: "|";
+    color: red;
+    font-family: Open Sans Condensed;
+    margin-right: 3px;
+    font-size: 20px;
+    font-weight: 600;
+
 }
 
 .animation-helper .menu {
@@ -124,8 +140,11 @@
 }
 
 
-
-
 .animation-help .codeBlock {
     float: left;
+}
+
+
+.animation-help .textCommand {
+    font-size: 22px;
 }
