--- a/app/components/statusbar/statusbar.css
+++ b/app/components/statusbar/statusbar.css
@@ -20,10 +20,17 @@
 	position: absolute;
 	height: 12px;
 	top: 50px;
-	width: 85%;
 	margin: auto;
 	left: 0;
 	right: 0;
+	width: 83%;
+}
+
+#Lesson .outer-statusbar-progress-bar {
+	float: left;
+	margin-left: 3px;
+	margin-right: 3px;
+	width: calc(100% - 126px);
 }
 
 #Lesson .statusbar-progress .progress-bar {
@@ -33,16 +40,18 @@
 	font-weight: 600;
 }
 
+#Lesson .statusbar-progress .bg-success {
+	background-color: rgb(130, 224, 160) !important;
+}
+
 #Lesson .statusbar-progress .progress-time {
 	animation: anim-fade-in 0.7s;
 	float: left;
 	color: darkslategray;
-	padding-left: 2px;
-	padding-right: 2px;	
-	margin-right: 2px;
+	text-align: center;
 	font-weight: 600;
 	background-color:#e9ecef;
-	width: auto;
+	width: 70px;
 	height: 16px;
 	font-size: 10px;
 	border: solid 1px darkgray;
@@ -176,19 +185,14 @@
 	font-variant-caps: all-petite-caps;
 }
 
-
-
-
-
 @-webkit-keyframes turn {
-    from{
-        -webkit-transform: rotate(0deg);
-    }
-    to{
-        -webkit-transform: rotate(360deg);
-    }
+	from{
+		-webkit-transform: rotate(0deg);
+	}
+	to{
+		-webkit-transform: rotate(360deg);
+	}
 }
-
 
 #Lesson .statusbar-presence {
 	width: 10px;
@@ -198,7 +202,7 @@
 	position: absolute;
 
 	border-radius: 50%;
-    border:solid 1px black;
+	border:solid 1px black;
 	z-index: 2;
 	
 }
