--- a/app/editor-components/animation-help/animation-help.css
+++ b/app/editor-components/animation-help/animation-help.css
@@ -1,72 +1,79 @@
 .animation-helper {
-    background: #ffffff;
-    z-index: 100;
-    
+	background: #ffffff;
+	z-index: 100;
+	position: fixed;
+	padding: 10px;
+	box-shadow: 0 0 4px black;
+	background: white;
+	width: 40%;
+	height: 84%;
+	left: 58%;
+	top: 14%;
 }
 
 .animation-helper h1  {
-    font-family: Open Sans Condensed;
-    font-weight: 800;
+	font-family: Open Sans Condensed;
+	font-weight: 800;
 }
 
 .animation-helper .menu-item {
-    font-family: Open Sans Condensed;
-    float: left;
-    margin-right: 8px;
-    font-size: 20px;
-    font-weight: 600;
-    font-variant: small-caps;
-    color: #2e4468;
+	font-family: Open Sans Condensed;
+	float: left;
+	margin-right: 8px;
+	font-size: 20px;
+	font-weight: 600;
+	font-variant: small-caps;
+	color: #2e4468;
 }
 
 .animation-helper .menu-item:hover {
-    text-decoration: underline;
-    color: orange;
-    cursor: pointer;
+	text-decoration: underline;
+	color: orange;
+	cursor: pointer;
 }
 
 .animation-helper .menu-item::before {
-    content: "|";
-    color: red;
-    font-family: Open Sans Condensed;
-    margin-right: 3px;
-    font-size: 20px;
-    font-weight: 600;
+	content: "|";
+	color: red;
+	font-family: Open Sans Condensed;
+	margin-right: 3px;
+	font-size: 20px;
+	font-weight: 600;
 
 }
 
 .animation-helper .menu {
-    width: 100%;
-    height: 20px;
+	width: 100%;
+	height: 20px;
 }
 
 .animation-help {
-    width: 100%;
-    height: 80%;
-    overflow-y: scroll;
-    overflow-x: hidden;
+	width: 100%;
+	height: 80%;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .animation-helper .exit {
-    position: absolute;
-    right: 4px;
-    top: 4px;
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
+	position: absolute;
+	right: 4px;
+	top: 4px;
+	width: 20px;
+	height: 20px;
+	font-size: 20px;
 }
 
 .animation-helper:hover .exit {
-    cursor: pointer;
-    color: red;
+	cursor: pointer;
+	color: red;
 }
 
 
 .animation-help h4 {
-    cursor: pointer;
-    color: orange;
-    transition: 0.2s;
-    margin-top: 20px;
+	cursor: pointer;
+	color: orange;
+	transition: 0.2s;
+	margin-top: 20px;
 }
 
 .animation-help h4:hover {
@@ -75,76 +82,74 @@
 
 
 .animation-help .param {
-    background: pink;
-    padding-left: 4px;
-    padding-right: 4px;
-    margin-left: 3px;
+	background: pink;
+	padding-left: 4px;
+	padding-right: 4px;
+	margin-left: 3px;
 }
 
 .animation-help a {
-    font-weight: 800;
-    cursor: pointer;
-    text-decoration: underline;
-    padding-left: 4px;
-    padding-right: 4px;
-    background: gainsboro;
+	font-weight: 800;
+	cursor: pointer;
+	text-decoration: underline;
+	padding-left: 4px;
+	padding-right: 4px;
+	background: gainsboro;
 }
 
 .animation-help a:hover {
-    font-weight: 800;
-    cursor: pointer;
-    color: blue;
-    text-decoration: underline;
+	font-weight: 800;
+	cursor: pointer;
+	color: blue;
+	text-decoration: underline;
 }
 
 .animation-help .sample {
-    font-size: 18px;
-    margin-left: 5px;
-    padding: 5px;
-    background: gainsboro;
-    width: auto;
+	font-size: 18px;
+	margin-left: 5px;
+	padding: 5px;
+	background: gainsboro;
+	width: auto;
 }
 
 .animation-help .green {
-    color: #3c763d;
-    font-weight: 800;
+	color: #3c763d;
+	font-weight: 800;
 }
 
 .animation-help .cube {
-    margin-left: 20px;
-    width: 40px;
-    height: 40px;
-    background: black;
+	margin-left: 20px;
+	width: 40px;
+	height: 40px;
+	background: black;
 }
 
 .animation-help code {
-    color: darkblue;
-    font-weight: 800;
+	color: darkblue;
+	font-weight: 800;
 }
 
 .animation-help .copy {
-    margin-top: -11px;
-    float: left;
-    margin-left: 12px;
-    width: 30px;
-    height: 50px;
-    background-image: url("https://isle.heinz.cmu.edu/clipboard_1544354447926.png");
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    opacity: 0.5;
+	margin-top: -11px;
+	float: left;
+	margin-left: 12px;
+	width: 30px;
+	height: 50px;
+	background-image: url("https://isle.heinz.cmu.edu/clipboard_1544354447926.png");
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	opacity: 0.5;
 
 }
 
 .animation-help .copy:hover {
-    opacity: 1;
+	opacity: 1;
 }
-
 
 .animation-help .codeBlock {
-    float: left;
+	float: left;
 }
 
-
 .animation-help .textCommand {
-    font-size: 22px;
+	font-size: 22px;
 }
